exports[`Activity should render the failed status component 1`] = `
<div
  className="card">
  <div
    className="card__item soft text-left soft-bottom rounded text-light-primary background--alert">
    <div
      className="floating text-left">
      <i
        className="soft-half-right">
        <Error
          fill="#FFFFFF"
          height="31px"
          width="30px" />
      </i>
      <h5
        className="display-inline-block floating__item soft-half-bottom">
        Dec 25, 2016
      </h5>
    </div>
    <p>
      You did something awesome and I\'ve never been more proud.
    </p>
    <Link
      className="text-light-primary plain"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="https://my.newspring.cc/give/now">
      <h5
        className="display-inline-block">
        Click This Link
      </h5>
      <span
        className="icon-arrow-next soft-half-left" />
    </Link>
  </div>
</div>
`;

exports[`Activity should render the warning status component 1`] = `
<div
  className="card">
  <div
    className="card__item soft text-left soft-bottom rounded text-light-primary background--dark-primary">
    <div
      className="floating text-left">
      <i
        className="soft-half-right">
        <Error
          fill="#FFFFFF"
          height="31px"
          width="30px" />
      </i>
      <h5
        className="display-inline-block floating__item soft-half-bottom">
        Dec 25, 2016
      </h5>
    </div>
    <p>
      You did something awesome and I\'ve never been more proud.
    </p>
    <Link
      className="text-light-primary plain"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="https://my.newspring.cc/give/now">
      <h5
        className="display-inline-block">
        Click This Link
      </h5>
      <span
        className="icon-arrow-next soft-half-left" />
    </Link>
  </div>
</div>
`;

exports[`Activity should render with the default set of props 1`] = `
<div
  className="card">
  <div
    className="card__item soft text-left soft-bottom rounded text-light-primary background--primary">
    <div
      className="floating text-left">
      <i
        className="soft-half-right">
        <Success
          fill="#FFFFFF"
          height="31px"
          width="30px" />
      </i>
      <h5
        className="display-inline-block floating__item soft-half-bottom">
        Dec 25, 2016
      </h5>
    </div>
    <p>
      You did something awesome and I\'ve never been more proud.
    </p>
    <Link
      className="text-light-primary plain"
      onlyActiveOnIndex={false}
      style={Object {}}
      to="https://my.newspring.cc/give/now">
      <h5
        className="display-inline-block">
        Click This Link
      </h5>
      <span
        className="icon-arrow-next soft-half-left" />
    </Link>
  </div>
</div>
`;
